Change for scroll Preventing scrollbar always showing Modified tag css Added code to create tags Added code to fetch tags

--- a/owledge/app/assets/stylesheets/application.scss
+++ b/owledge/app/assets/stylesheets/application.scss
@@ -64,6 +64,7 @@ body {
 .main-section{
   margin:0px;
   flex: 1;
+  max-height:90vh;
   overflow-y: auto;
 }
 .main-inside-section{
@@ -77,7 +78,7 @@ body {
 
 }
 .footer-large{
-    height:10vh;
+    height:0vh;
 
 }
 .bg-dark-l0{
