--- a/owledge/app/assets/stylesheets/tags.scss
+++ b/owledge/app/assets/stylesheets/tags.scss
@@ -4,28 +4,45 @@
             background: #f9f9f9;
             padding: 10px;
             border-radius: 4px;
-            border: 1px solid #ccc
+            border: 1px solid #ccc;
+    input {
+                border: none;
+                background: transparent;
+                outline: none;
+                width: 150px;
+    }
+    
+    .tag {
+                display: inline-block;
+                background-color: #009432;
+                color: white;
+                border-radius: 40px;
+                padding: 0px 3px 0px 7px;
+                margin-right: 5px;
+                margin-bottom: 5px;
+        a {
+                    margin: 0 7px 3px;
+                    display: inline-block;
+                    cursor: pointer;
+        }
+    }
+    
 }
-
-.tags-input-wrapper input {
-            border: none;
-            background: transparent;
-            outline: none;
-            width: 150px;
+.tag-wrapper{
+    overflow:hidden;
+    max-height: 30px;
 }
-
-.tags-input-wrapper .tag {
-            display: inline-block;
-            background-color: #009432;
-            color: white;
-            border-radius: 40px;
-            padding: 0px 3px 0px 7px;
-            margin-right: 5px;
-            margin-bottom: 5px;
-}
-
-.tags-input-wrapper .tag a {
+.tag-display {
+    display: inline-block;
+    background-color: #009432;
+    color: white;
+    border-radius: 40px;
+    padding: 3px 7px 3px 7px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    a {
             margin: 0 7px 3px;
             display: inline-block;
             cursor: pointer;
+    }
 }
